--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,24 @@ if z == "three":
     print("ok wise guy")
 else:
     print("what")
+
+a = 13
+b = 5
+c = a % b
+print(a, "mod", b, "=",
+      c, sep="")
+
+a=42
+b=54
+for i in range(2,a+1)
+if a%i == 0 and b%i == 0
+# Create a function that accepts 2 arguments. Find the greatest common
+# factor between those numbers. 
+a=42
+b=54
+for i in range(2,a+1):
+    if a%i ==0 and b%i ==0:
+        print("learn to add")
+# Create a function that accepts an input and determines all factors
+# of the number. 
+
